--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,6 +10,9 @@ scopes = {
 	"last_search.DE949528" = "Plastic SCM"
 	"OpenInspectorPreview.DE949528" = "0"
 	"currentGroup.DE949528" = "all"
+	"last_search.DD5CDD96" = "ref:55518:"
+	"OpenInspectorPreview.DD5CDD96" = "0"
+	"currentGroup.DD5CDD96" = "scene"
 }
 providers = {
 	adb = {
@@ -56,6 +59,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"ref:55518:"
 ]
 searchItemFavorites = [
 ]
