--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -13,6 +13,9 @@ scopes = {
 	"last_search.DD5CDD96" = "ref:55518:"
 	"OpenInspectorPreview.DD5CDD96" = "0"
 	"currentGroup.DD5CDD96" = "scene"
+	"last_search.DA949528" = "Camera"
+	"OpenInspectorPreview.DA949528" = "0"
+	"currentGroup.DA949528" = "all"
 }
 providers = {
 	adb = {
